--- a/nextup/pom.xml
+++ b/nextup/pom.xml
@@ -52,6 +52,33 @@
      <artifactId>commons-math3</artifactId>
      <version>3.6.1</version>
    </dependency>
+
+	<!-- Spring Boot JPA Starter (required for @Entity etc.) -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
+
+	<!-- (Optional) H2 Database for local development -->
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<scope>runtime</scope>
+	</dependency>
+	
+	<dependency>
+		<groupId>jakarta.persistence</groupId>
+		<artifactId>jakarta.persistence-api</artifactId>
+		<version>3.1.0</version>
+	</dependency>
+
+	<dependency>
+		<groupId>javax.persistence</groupId>
+		<artifactId>javax.persistence-api</artifactId>
+		<version>2.2</version>
+	</dependency>
+
+
  </dependencies>
 
 	<build>
